--- a/templates/chat.html
+++ b/templates/chat.html
@@ -30,6 +30,13 @@
 
       <div class="flex items-center gap-4">
 
+        <button id="undoBtn" onclick="undo()" type="button"
+        class=" text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
+        <i class="text-xl w-5 h-5 bi bi-arrow-counterclockwise"></i>
+      </button>
+
+
+
         <button onclick="toggleUserModal()" type="button"
         class="text-gray-500 dark:text-gray-200 hover:dark:bg-blue-500 hover:bg-blue-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-md text-sm px-2 py-1 bg-gray-100 dark:bg-gray-700">
         <i class="text-xl w-5 h-5 bi bi-person-fill"></i>
@@ -74,11 +81,11 @@
     <div id="userModal" class="hidden h-screen w-screen flex items-center justify-center fixed top-0 left-0 z-30 bg-slate-600/10">
       <div class="lg:h-[50%] lg:w-[50%] w-[90%] lg:aspect-square p-4 bg-white dark:bg-gray-800 rounded-lg shadow dark:border-none border text-gray-100">
         <div class="p-4 md:p-5 space-y-4">
-          <h1 class="text-2xl font-bold text-slate-800 dark:text-slate-100">User Description</h1>
+          <h1 class="text-2xl font-bold text-slate-800 dark:text-slate-100">Your Description</h1>
           
           <div>
 
-            <label for="content" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Pesonality
+            <label for="content" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white pb-2 ">Give your character description for better experience.
             </label>
             <textarea id="content" name="content" rows="4"
               class="resize-none block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
@@ -104,11 +111,25 @@
     const messageInputElement = document.getElementById("message-input");
     const sendButtonElement = document.getElementById("send-button");
     const userModal = document.getElementById("userModal");
+    const undoBtn = document.getElementById('undoBtn')
     const status = document.getElementById("status");
     const incontent = "{{content}}"
     const inimg = "{{img}}"
     const inname = "{{name}}"
     let userInfo = localStorage.getItem("userInfo");
+
+
+
+
+    const log = [
+      {
+        "role": "system",
+        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response shoul be less than 50 words, the response must contain line break or spaces between each lines, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, the user information is ${userInfo}, it is not neccessery for the character to know the user information on the begining, ${incontent}`
+      }
+
+    ]
+
+    
 
     if(userInfo === null)
     {
@@ -125,24 +146,19 @@
       userModal.classList.toggle("hidden")
     }
 
+    function undo(){
+      log.pop()
+      renderChatLog()
+    }
 
     function handelUserInfoInput()
     {
       const userDescription = document.getElementById("content").value
       localStorage.setItem('userInfo', userDescription) 
-      toggleUserModal()
+      location.reload()
     }
 
 
-
-
-    const log = [
-      {
-        "role": "system",
-        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response shoul be less than 50 words, the response must contain line break or spaces between each lines, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, ${userInfo}, it is not neccessery for the character to know the user information on the begining, ${incontent}`
-      }
-
-    ]
 
 
     function revert(index) {
@@ -170,8 +186,17 @@
           li.innerHTML = `<div class=" w-full flex flex-col gap-2 justify-start "><div class="flex  items-center"><img src="/static/${(inimg ? inimg : "user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><md class="w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-600">${entry.content}</md><div class=" ${(index == (log.length - 1)) ? null : "hidden"} px-4 py-2 w-auto rounded-md flex gap-4"><button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="revert()"><i class="bi bi-arrow-repeat"></i>
   </button></div></div>`;
         }
+        console.log(log.length)
         chatLogElement.appendChild(li);
         chatLogElement.scrollTop = chatLogElement.scrollHeight;
+
+        if (log.length == 2)
+        {
+          undoBtn.classList.add("hidden")
+        }
+        else{
+          undoBtn.classList.remove("hidden")     
+        }
       });
     }
 
