--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,7 +23,7 @@
 
 
 
-    <div class="absolute w-[90%] top-0 z-10 flex justify-between gap-2 items-center py-2">
+    <div class="fixed lg:w-[55%] w-[90%] top-0 z-10 flex justify-between gap-2 items-center py-2">
       <a href="/" class="text-xl font-bold p-4">ChatKaroo (Beta)</a>
 
       <span id="status"></span>
@@ -60,7 +60,7 @@
 
 
 
-    <div id="chat-log" class="chat-log overflow-y-scroll lg:h-[70%] h-[80%] w-full flex flex-col gap-4">
+    <div id="chat-log" class="chat-log overflow-y-scroll lg:h-[85%] h-[85%] w-full flex flex-col gap-4 pb-8">
     </div>
 
 
@@ -124,7 +124,7 @@
     const log = [
       {
         "role": "system",
-        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response shoul be less than 50 words, the response must contain line break or spaces between each lines, the response should be in mardown format, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, the user information is ${userInfo}, it is not neccessery for the character to know the user information on the begining, ${incontent}`
+        "content": `roleplay to this character and situation, if there is no situation then create a random situation, the response should be short, the response should be in 2 to 3 lines, the response should be less than 80 words, the response must contain spaces between each lines or paragraph, the response should be in mardown format with good indentation an spaces between lines, the character statements should be in bold, the inner thought and feelings and action should be in italic, do not admit you are a AI or anything related to AI, just act as a real person, do not talk to your self, the conversation should be interactive and interesting, the conversation should contains emotions and feelings, the user information is ${userInfo}, it is not neccessery for the character to know the user information on the begining, the character is ${incontent}`
       }
 
     ]
@@ -176,14 +176,14 @@
         const li = document.createElement("div");
         if (entry.role == "user") {
 
-          li.innerHTML = `<div class="w-full flex justify-end text-black"><p class=" w-[60%] dark:bg-gray-700 dark:text-gray-300 bg-blue-100 rounded-lg p-4 text-base font-[500]">${entry.content}</p></div>`;
+          li.innerHTML = `<div class="w-full flex justify-end text-black"><p class=" w-[60%] dark:bg-gray-700 dark:text-gray-300 bg-blue-100 rounded-lg p-4 text-base font-[500] text-gray-800">${entry.content}</p></div>`;
         }
         else if (entry.role == "system") {
           return null
         }
         else {
 
-          li.innerHTML = `<div class=" w-full flex flex-col gap-2 justify-start "><div class="flex  items-center"><img src="/static/${(inimg ? inimg : "user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><md class="w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-600">${entry.content}</md><div class=" ${(index == (log.length - 1)) ? null : "hidden"} px-4 py-2 w-auto rounded-md flex gap-4"><button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="revert()"><i class="bi bi-arrow-repeat"></i>
+          li.innerHTML = `<div class=" w-full flex flex-col gap-2 justify-start "><div class="flex  items-center"><img src="/static/${(inimg ? inimg : "user-avater.jpg")}" alt="${inname}" class="h-8 w-8 rounded-full mx-4 object-cover"><p class="text-sm font-bold">${inname}</p></div><md class="w-[98%] bg-gry-100 rounded-lg p-4 text-[16px] font-[500] dark:text-gray-300 bg-gray-100 dark:bg-gray-800 dark:text-gray-200 text-gray-800">${entry.content}</md><div class=" ${(index == (log.length - 1)) ? null : "hidden"} px-4 py-2 w-auto rounded-md flex gap-4"><button class="px-2 py-1 rounded-md dark:bg-gray-700 bg-gray-100 hover:dark:bg-blue-500 hover:bg-blue-100" onclick="revert()"><i class="bi bi-arrow-repeat"></i>
   </button></div></div>`;
         }
         console.log(log.length)
@@ -205,7 +205,7 @@
     // Function to send data to the Flask API
     async function sendData(data) {
       status.innerHTML = '<div class="z-10 fixed lg:left-[21%] left-[10%] bottom-28" role="status"><svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg><span class="sr-only">Loading...</span></div>'
-      const url = 'https://chatkaroo.vercel.app/gen';
+      const url ="{{hostUrl}}/gen"
 
       try {
         const response = await fetch(url, {
